unpackaged/main/default/objects/Order/fields/Build_Partner__c.field-meta.xml
<CustomField>
    <fullName>Build_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vendor__c.Active_MSA_Flag_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>Vendor__c.Stage__c</field>
            <operation>equals</operation>
            <value>Ready to Schedule, Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>