unpackaged/main/default/objects/Order/fields/Contractor_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Project_Manager__c</fullName>
    <label>Contractor Project Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>