unpackaged/main/default/objects/Order/fields/Guaranteed_Substantial_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Substantial_Completion_Date__c</fullName>
    <label>Guaranteed Substantial Completion Date</label>
    <type>Date</type>
</CustomField>