unpackaged/main/default/objects/Order/fields/Palmetto_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Contract_Manager__c</fullName>
    <label>Palmetto Contract Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>