unpackaged/main/default/objects/Order/fields/Palmetto_Materials_Delivery_Pickup_Loc__c.field-meta.xml
<CustomField>
    <fullName>Palmetto_Materials_Delivery_Pickup_Loc__c</fullName>
    <label>Palmetto Materials Delivery / Pickup Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>