unpackaged/main/default/objects/Order/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <label>Project Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>