unpackaged/main/default/objects/Order/fields/Project_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Date__c</fullName>
    <label>Project Date</label>
    <type>Date</type>
</CustomField>