unpackaged/main/default/objects/Order/fields/Project_Price__c.field-meta.xml
<CustomField>
    <fullName>Project_Price__c</fullName>
    <label>Project Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>