unpackaged/main/default/objects/Order/fields/Project_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Project_Specifications__c</fullName>
    <label>Project Specifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>